--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "start": "node ./server.js"
   },
   "dependencies": {
-    "express": "~4.9.0",
     "body-parser": "~1.8.1",
     "cookie-parser": "~1.3.3",
-    "morgan": "~1.3.0",
-    "debug": "~2.0.0"
+    "cors": "^2.8.4",
+    "debug": "~2.0.0",
+    "express": "~4.9.0",
+    "morgan": "~1.3.0"
   }
 }
