Renaming app due to avoid problems

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "CRM API and Front with AngularJS",
+  "name": "crm-server-and-front",
   "version": "1.0.0",
   "private": true,
   "scripts": {
